--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "luxon": "^3.4.3",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.4",
+    "@types/luxon": "^3.3.2",
     "prisma": "5.1.1",
     "ts-node": "^10.9.1"
   },
