--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.8",
+    "react-textarea-autosize": "^8.5.3",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "xstate": "^4.38.2",
