--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@xstate/react": "^3.2.2",
     "autoprefixer": "10.4.16",
     "bcryptjs": "^2.4.3",
+    "bufferutil": "^4.0.7",
     "dotenv": "^16.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
@@ -32,6 +33,7 @@
     "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "utf-8-validate": "^6.0.3",
     "ws": "^8.14.2",
     "xstate": "^4.38.2",
     "zod": "^3.22.2"
